--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,8 @@
     .setting-page-section {
         @apply flex flex-col items-start justify-start space-y-10
     }
+    
+    
 }
 
 @layer utilities {
@@ -99,6 +101,10 @@
     
     .line{
         @apply w-full h-[1px] bg-neutral-light-60 dark:bg-neutral-dark-60
+    }
+    
+    .section {
+        @apply flex flex-col items-center justify-center px-10 pt-[256px]
     }
 }
 
